# ROCR-Runtime

./: CMakeLists.txt  README.md
.github/workflows/: ci-linux.yml
libhsakmt/src/: fmm.c  memory.c  queues.c  topology.c
libhsakmt/tests/kfdtest/: CMakeLists.txt
rocrtst/suites/aie/: CMakeLists.txt  add_four.pdi  add_four_insts.txt  add_ten.pdi  aie_hsa_cu_mask_test.cc  aie_hsa_dispatch_test.cc  aie_hsa_test_bare_add_one.cc  check_kmem_leak.sh  hsa_ipu.h  memory.cc
runtime/docs/sphinx/: requirements.txt
runtime/hsa-runtime/: CMakeLists.txt
runtime/hsa-runtime/core/driver/kfd/: amd_kfd_driver.cpp
runtime/hsa-runtime/core/driver/xdna/: amd_xdna_driver.cpp
runtime/hsa-runtime/core/inc/: agent.h  amd_aie_agent.h  amd_aie_aql_queue.h  amd_cpu_agent.h  amd_gpu_agent.h  amd_xdna_driver.h  driver.h  queue.h  runtime.h
runtime/hsa-runtime/core/runtime/: amd_aie_agent.cpp  amd_aie_aql_queue.cpp  amd_cpu_agent.cpp  amd_gpu_agent.cpp  amd_memory_region.cpp  amd_topology.cpp  runtime.cpp
runtime/hsa-runtime/core/util/: atomic_helpers.h
